# neural_network_playground

./: .gitignore  README.md  main.py  main_old.py  pyproject.toml  requirements.txt  shoes_main.py  tests.py
datasets/: and.csv  not.csv  shoes.csv  test_2d_parabola.csv  xor.csv
experiments/: rice.py  xor.py
experiments/reinforcement_learning/: agent.py  constants.py  error.py  game.py  game_helpers.py  game_runner.py  history.py  statistics.py  tests.py  tic_tac_toe.py  visual.py
neural_network/: __init__.py  graph.py  helpers.py  layer.py  matrix.py  neural_network.py  vector.py
neural_network_v2/: datasets.py  helpers.py  layer.py  neural_network.py  types.py  visual.py
neural_network_v2/tests/: test_helpers.py
perceptron_visualisation/: main.py
shared/: helpers.py  matrix.py  random.py  types.py  vector.py
shared/tests/: __init__.py  test_helpers.py
shoes_size_predictor/: datasets.py  helpers.py  layer.py  main.py  neural_network.py  types.py  visual.py
shoes_size_predictor/tests/: __init__.py  test_helpers.py
