[project]
name = "neural-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

[tool.setuptools]
packages = ["experiments","neural_network_v2", "shared"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"